# django-triggers

./: .coveragerc  .flake8  .gitignore  .travis.yml  LICENSE.txt  README.md  README.rst  circle.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  settings_test.py  setup.py
django-triggers/: logic.py  models.py
django-triggers/loggers/: base.py  database.py  python_logging.py
django-triggers/management/commands/: clean_triggers.py  process_triggers.py
django-triggers/migrations/: 0001_initial.py  0001_squashed_0006_auto_20171003_0945.py  0002_auto_20151208_1454.py  0003_auto_20160512_0847.py  0004_auto_20170216_1007.py  0005_trigger_successful.py  0006_auto_20171003_0945.py  0007_auto_20201001_1530.py
django-triggers/tests/: models.py  test_logic.py  test_models.py
django-triggers/tests/factories/: triggers.py
djtriggers/: __init__.py  checks.py  exceptions.py  locking.py  logic.py  managers.py  models.py  tasks.py
djtriggers/loggers/: __init__.py  base.py  database.py  python_logging.py
djtriggers/migrations/: 0001_initial.py  0001_squashed_0006_auto_20171003_0945.py  0002_auto_20151208_1454.py  0003_auto_20160512_0847.py  0004_auto_20170216_1007.py  0004_trigger_content_type.py  0005_trigger_successful.py  0006_auto_20171003_0945.py  0007_auto_20201001_1530.py
djtriggers/south_migrations/: 0001_initial.py  0002_auto__del_unique_trigger_source.py  0003_auto__add_triggerresult.py
djtriggers/tests/: models.py  test_logic.py  test_models.py
requirements/: requirements.txt  requirements_test.txt
(+3 files in other folders)
